update build-emulator.md